# rust_port

./: .gitignore  Cargo.toml  README.md  program.md
151-trading-strategies-md/: 00-front-matter.md  01-introduction-and-summary.md  02-options.md  03-stocks.md  04-exchange-traded-funds.md  05-fixed-income.md  06-indexes.md  07-volatility.md  08-foreign-exchange.md  09-commodities.md  10-futures.md  11-structured-assets.md  12-convertibles.md  13-tax-arbitrage.md  14-miscellaneous-assets.md  15-distressed-assets.md  16-real-estate.md  17-cash.md  18-cryptocurrencies.md  19-global-macro.md  20-infrastructure.md  README.md  appendix-a-r-source-code.md  appendix-b-disclaimers.md  bibliography.md  glossary.md  index.md
crates/btc_structure/: Cargo.toml
crates/btc_structure/src/: config.rs  engine.rs  features.rs  lib.rs  provider.rs  ranking.rs
crates/calibration/: Cargo.toml
crates/calibration/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: cache.rs  candle_store.rs  client.rs  coverage.rs  lib.rs  rate_limiter.rs
crates/evaluator/: Cargo.toml
crates/evaluator/src/: calendar.rs  cooldown.rs  lib.rs  scoring.rs  windows.rs
crates/evaluator/tests/: cooldown.rs
crates/indicators/: Cargo.toml
crates/indicators/src/: compute.rs  lib.rs  registry.rs
crates/indicators/tests/: parity_indicators.rs
crates/live/: Cargo.toml
crates/live/examples/: run_strategy.rs
crates/live/src/: auth_client.rs  engine.rs  error.rs  exchange_info.rs  executor.rs  lib.rs  market_client.rs  order_count.rs  shutdown.rs  signal_generator.rs  time_sync.rs  tracker.rs
crates/live/tests/: auth_client_http.rs  engine_integration.rs  executor_flow.rs  market_client_no_cache.rs  tracker_lifecycle.rs
crates/live_opus46/: Cargo.toml
crates/live_opus46/src/: cooldown.rs  lib.rs  main.rs
crates/models/: Cargo.toml
crates/models/src/: backtester.rs  context.rs  cooldown.rs  funding.rs  interval.rs  lib.rs  live.rs  marketdata.rs
crates/models/tests/: parity.rs
crates/research_runtime/: Cargo.toml
crates/research_runtime/src/: context_builder.rs  key_levels.rs  lib.rs  metrics.rs  output.rs  validate.rs
crates/resolver/: Cargo.toml
crates/resolver/benches/: exit_bench.rs
crates/resolver/src/: exit.rs  kernel.rs  lib.rs  stats.rs
crates/resolver/tests/: parity_resolver.rs
crates/strategy_blocks/: Cargo.toml
crates/strategy_blocks/src/: breakout.rs  divergence.rs  events.rs  gates.rs  levels.rs  lib.rs  setup.rs
fixtures/: generate.py
fixtures/calibration/: grid_search.json
fixtures/engine/: compute_stats.json
fixtures/indicators/: btc_1h_1000bars.json  warmup_requirements.json
fixtures/live/: position_state.json
fixtures/resolver/: pnl_values.json  tp_sl_prices.json
research/gpt54_mid_22apr26_1/: Cargo.toml  results.tsv
research/gpt54_mid_22apr26_1/src/: lib.rs  main.rs
research/opus46_max_16apr26_1/: Cargo.toml  LESSONS.md  results.tsv
research/opus46_max_16apr26_1/src/: lib.rs  main.rs
research/opus47_max_20apr26_1/: Cargo.toml  results.tsv
research/opus47_max_20apr26_1/src/: lib.rs  main.rs
research/opus47_max_23apr26_2/: Cargo.toml  results.tsv
research/opus47_max_23apr26_2/src/: lib.rs  main.rs
tools/repair_gaps/: Cargo.toml
tools/repair_gaps/src/: main.rs
tools/scaffold/: Cargo.toml
tools/scaffold/src/: main.rs
