[package]
name = "ct-research-opus47-max-20apr26-1"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ct-research-opus47-max-20apr26-1"
path = "src/main.rs"

[dependencies]
claude-trader-research-runtime.workspace = true
claude-trader-models.workspace = true
claude-trader-indicators.workspace = true
claude-trader-strategy-blocks.workspace = true
claude-trader-calibration.workspace = true
chrono.workspace = true
serde_json.workspace = true
